# texas-mushrooms

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: mushroom_filter.yaml
data/outputs/: h3_counts_map.html  h3_elevation_map.html  spatial_daily_counts.csv  spatial_model_summary.csv  weather_model_summary.csv
data/processed/: mushroom_daily.csv  mushroom_daily.parquet  photo_geospatial.csv  species_frequency.csv  weather_enriched.csv
data/raw/: days.csv
notebooks/: EDA.ipynb  pre-process-data.py  run_spatial_analysis.py  spatial_analysis.ipynb
scripts/: prepare_datasets.py  run_pipeline.py  run_spatial_analysis.py
src/texas_mushrooms/: cli.py  daily_dataset.py  scraper.py  weather.py
src/texas_mushrooms/config/: __init__.py  filter_config.py
src/texas_mushrooms/modeling/: bayesian.py
src/texas_mushrooms/pipeline/: filters.py  processing.py  spatial.py  weather.py
src/texas_mushrooms/scrape/: core.py  schemas.py
tests/: test_run_spatial_analysis.py  test_scraper.py
